--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@ cython_debug/
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/django,visualstudiocode
+d2tal/service.py
