--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,8 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/django,visualstudiocode
 
 service.py
+manifest.json
+DestinyClassDefinition.json
+DestinyInventoryItemDefinition.json
+DestinyStatDefinition.json
+DestinyVendorDefinition.json
